--- a/src/Components/Category/Category.scss
+++ b/src/Components/Category/Category.scss
@@ -29,6 +29,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
+        transition: gap ease 0.3s;
     }
 
     @media screen and (max-width: 767px) {
