--- a/src/Components/CategoryQuestion/CategoryQuestion.scss
+++ b/src/Components/CategoryQuestion/CategoryQuestion.scss
@@ -1,8 +1,17 @@
+.question.active {
+    margin-bottom: 8px;
+    transition: margin-bottom ease 0.3s;
+}
 .question {
     display: flex;
     flex-direction: column;
     gap: 24px;
     border-bottom: 1px solid var(--colorGrayLight);
+
+    &.active .question-content-top__icon {
+        transform: rotate(-180deg);
+        transition: transform ease 0.3s;
+    }
 
     &-content {
         &-top, &-bottom-wrapper {
@@ -11,17 +20,10 @@
             justify-content: space-between;
         }
 
-        &-top.active {
-            .question-content-top__icon {
-                transform: rotate(-180deg);
-                transition: transform ease 0.3s;
-            }
-        }
-
         &-top {
             cursor: pointer;
             align-items: center;
-            margin-bottom: 16px;
+            padding-bottom: 16px;
 
             &__descr {
                 color: var(--colorGray);
@@ -59,9 +61,9 @@
             box-sizing: content-box;
             gap: 16px;
             justify-content: space-between;
-            // padding-bottom: 32px;
-            transition: height ease 0.3s;
-            transition: padding-bottom ease 0.3s;
+            transition-property: height, padding-bottom;
+            transition-duration: 0.3s;
+            transition-timing-function: ease;
 
             &__descr {
                 color: var(--colorGray);
