refactoring and adding custom hook

--- a/src/Components/Category/Category.scss
+++ b/src/Components/Category/Category.scss
@@ -3,6 +3,11 @@
     transition: transform ease 0.3s;
 }
 .category {
+    &-list {
+        overflow: hidden;
+        transition: max-height 0.3s ease
+    }
+
     &-top {
         cursor: pointer;
         display: flex;
